force-app/main/default/objects/ProvusConfiguratorSetting__mdt/ProvusConfiguratorSetting__mdt.object-meta.xml
<CustomObject>
    <label>Provus Configurator Setting</label>
    <pluralLabel>Provus Quoting Settings</pluralLabel>
</CustomObject>