force-app/main/default/objects/ProvusConfiguratorSetting__mdt/fields/DisableAutomaticOpportunitySync__c.field-meta.xml
<CustomField>
    <fullName>DisableAutomaticOpportunitySync__c</fullName>
    <defaultValue>false</defaultValue>
    <description
	>Checking this will disable any automatic syncing of quote price updates to their associated opportunities.</description>
    <label>Disable Automatic Opportunity Sync</label>
    <type>Checkbox</type>
</CustomField>