force-app/main/default/objects/ProvusConfiguratorSetting__mdt/fields/HiddenFields__c.field-meta.xml
<CustomField>
    <fullName>HiddenFields__c</fullName>
    <label>Hidden Fields</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>