force-app/main/default/objects/ProvusConfiguratorSetting__mdt/fields/ProductDefaultFields__c.field-meta.xml
<CustomField>
    <fullName>ProductDefaultFields__c</fullName>
    <label>Product Default Fields</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>