force-app/main/default/objects/ProvusConfiguratorSetting__mdt/fields/QuoteItemDefaultFields__c.field-meta.xml
<CustomField>
    <fullName>QuoteItemDefaultFields__c</fullName>
    <label>Quote Item Default Fields</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>