force-app/main/default/objects/ProvusConfiguratorSetting__mdt/fields/RateCardItemDefaultFields__c.field-meta.xml
<CustomField>
    <fullName>RateCardItemDefaultFields__c</fullName>
    <label>Rate Card Item Default Fields</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>