force-app/main/default/objects/ProvusConfiguratorSetting__mdt/fields/RequiredFields__c.field-meta.xml
<CustomField>
    <fullName>RequiredFields__c</fullName>
    <label>Required Fields</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>