force-app/main/default/objects/ProvusConfiguratorSetting__mdt/fields/UneditableFields__c.field-meta.xml
<CustomField>
    <fullName>UneditableFields__c</fullName>
    <label>Uneditable Fields</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>